--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,3 +11,9 @@ ul{
   margin: auto;
   padding: 10px;
 }
+
+button{
+  color: blue;
+  text-shadow: 1px 2px 2px rgba(28,110,164,0.5);  
+  border: 2px dotted blue;
+}
