--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -16,7 +16,6 @@ button{
   color: blue;
   text-shadow: 1px 2px 2px rgba(28,110,164,0.5);  
   border: 2px dotted blue;
-  display:inline-block;
-
+  margin: 2px;
 }
 
