--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,6 +1,16 @@
 body {
     background-color: lightblue;
     text-align: center;
+    font-family: "Lucida Console", Monaco, monospace;
+    font-size: 15px;
+    letter-spacing: 0px;
+    word-spacing: 2px;
+    color: #000000;
+    font-weight: 400;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
   }
 
 h1{
@@ -14,8 +24,15 @@ ul{
 
 button{
   color: blue;
-  text-shadow: 1px 2px 2px rgba(28,110,164,0.5);  
-  border: 2px dotted blue;
+  text-shadow: 1px 1px 1px rgba(28,110,164,0.5);  
+  border-bottom: 3px double #D64444;
   margin: 2px;
+}
+
+div.workout-card{
+  margin: 25px;
+  border: 4px outset #D64444;
+  outline: 4px inset #D64444;
+    outline-offset: 1px;
 }
 
