--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -31,7 +31,17 @@ button{
 
 div.workout-card{
   margin: 25px;
-  border: 4px outset #D64444;
-  outline: 4px inset #D64444;
+  border: 2px outset #D64444;
+  outline: 2px inset #D64444;
     outline-offset: 1px;
+}
+
+div.exercises{
+  border-top: 5px solid;
+  color: black;
+}
+
+div.exercise-info{
+  border-bottom: 3px solid;
+  color: black;
 }
